# morphorm

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  algo.md
benches/: results-2023-03-12.md  results-2023-03-13.md  stack.rs  wide_shallow_tree.rs
demo/: Cargo.toml
demo/src/: main.rs  (+3 more)
ecs/: Cargo.toml
examples/: advanced.rs  align_bottom.rs  align_center.rs  align_center_horizontal.rs  align_center_vertical.rs  align_left.rs  align_right.rs  align_self_left.rs  align_top.rs  app.rs  auto_height.rs  basic.rs  grid.rs  grid_2x2.rs  horizontal_stack.rs  horizontal_stack_reversed.rs  intrinsic_size.rs  layout_type_column.rs  layout_type_row.rs  main.rs  menu.rs  min_width.rs  mixed_row.rs  parent_child.rs  position_type_self_directed.rs  self_directed.rs  space_around.rs  space_between.rs  test.rs  textwrap.rs  wrap.rs
playground/: Cargo.toml
src/: cache.rs  cache2.rs  hierarchy.rs  layout copy.rs  layout.rs  layout2.rs  lib.rs  node.rs  node2.rs  types.rs  units.rs  util.rs
tests/: absolute.rs  absolute_layout_align_items_and_justify_content_center.rs  absolute_layout_align_items_and_justify_content_center_and_bottom_position.rs  absolute_layout_align_items_and_justify_content_center_and_left_position.rs  absolute_layout_align_items_and_justify_content_center_and_right_position.rs  absolute_layout_align_items_and_justify_content_center_and_top_position.rs  absolute_layout_align_items_and_justify_content_flex_end.rs  absolute_layout_align_items_center.rs  absolute_layout_align_items_center_on_child_only.rs  absolute_layout_child_order.rs  auto.rs  auto_size.rs  auto_size_tests.rs  border.rs  child_space.rs  constraints.rs  content_size.rs  cross_before.rs  direction.rs  gap.rs  height_constraints.rs  left.rs  main_after.rs  main_before.rs  overlay.rs  padding.rs  percentage_size.rs  pixels_size.rs  right.rs  root_node_tests.rs  self_directed.rs  single_child_node_tests.rs  size.rs  size_constraints.rs  space_between.rs  space_constraints.rs  stretch_main_stretch_cross.rs  stretch_size.rs  stretch_wrap.rs  top.rs  (+3 more)
(+44 files in other folders)
