[package]
name = "morphorm"
version = "0.5.0"
edition = "2021"
author = "George Atkinson"
license = "MIT"
description = "A UI layout engine"
repository = "https://github.com/vizia/morphorm"
keywords = ["ui", "gui", "layout"]

[workspace]
members = ["playground"]

[dependencies]
smallvec = "1.10.0"

[dev-dependencies]
morphorm-ecs = {path = "ecs"}
winit = { version = "0.25.0", default-features = false }
femtovg = {version = "0.4.0", default-features = false}
glutin = "0.27.0"
rand = "0.8.5"
criterion = "0.4.0"
unicode-segmentation = "1.10.1"

[lib]
doctest = false

[[bench]]
name = "wide_shallow_tree"
harness = false